--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">NewsApp</string>
+    <string name="top_news">Top News</string>
+    <string name="categories">Categories</string>
+    <string name="saved">Saved</string>
 </resources>
