--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <string name="top_news">Top News</string>
     <string name="categories">Categories</string>
     <string name="saved">Saved</string>
+    <string name="business">business</string>
+    <string name="entertainment">entertainment</string>
+    <string name="general">general</string>
+    <string name="health">health</string>
+    <string name="science">science</string>
+    <string name="sports">sports</string>
+    <string name="technology">technology</string>
+    <string name="category_guide">Choose a category to start reading</string>
 </resources>
